Schema file Added

--- a/notebooks/Model.ipynb
+++ b/notebooks/Model.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "4   Yes  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "(7043, 21)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "MonthlyCharges  118.75  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,17 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Saving the distribution format in json format for avoiding anomalies while the app in use\n",
     "import os \n",
     "\n",
-    "\n",
     "overview = data.describe()\n",
     "schema_in = overview.loc[[\"min\",\"max\"]]\n",
-    "schema_in.to_json(\"tests\")"
+    "schema_in.to_json(\"schema_in.json\")"
    ]
   },
   {
